--- a/phosagro/finding/finding.csproj
+++ b/phosagro/finding/finding.csproj
@@ -33,8 +33,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Colorful.Console, Version=1.2.15.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Colorful.Console.1.2.15\lib\net461\Colorful.Console.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,16 +48,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="data\InMemory.cs" />
-    <Compile Include="models\EndPoint.cs" />
-    <Compile Include="models\HillPoint.cs" />
-    <Compile Include="models\Map.cs" />
-    <Compile Include="models\Point.cs" />
+    <Compile Include="exception\IndexOutOfMapException.cs" />
+    <Compile Include="exception\HeightOutOfMaxValueException.cs" />
+    <Compile Include="model\Map.cs" />
+    <Compile Include="model\Path.cs" />
+    <Compile Include="model\Point.cs" />
+    <Compile Include="model\TopologyGenerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="models\StartPoint.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
