--- a/universitycollege/finding/finding.csproj
+++ b/universitycollege/finding/finding.csproj
@@ -49,10 +49,10 @@
   <ItemGroup>
     <Compile Include="controller\Controller.cs" />
     <Compile Include="controller\PatternController.cs" />
-    <Compile Include="model\HardPath.cs" />
     <Compile Include="model\Path.cs" />
     <Compile Include="model\PathFinder.cs" />
     <Compile Include="model\Pattern.cs" />
+    <Compile Include="model\ReaderPatternFile.cs" />
     <Compile Include="view\InMemory.cs" />
     <Compile Include="model\Map.cs" />
     <Compile Include="model\TopologyGenerator.cs" />
